# sampleproject

./: pyproject.toml
src/example_package_jtucker/: console_scripts.py
