[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "example_package_jtucker"
version = "0.0.1"
authors = [
  { name="John Tucker", email="john@larkintuckerllc.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/larkintuckerllc/sampleproject"
Issues = "https://github.com/larkintuckerllc/sampleproject/issues"

